@@ -18,7 +18,6 @@
  */
 package org.apache.batik.anim.timing;
 
-import java.util.Iterator;
 import java.util.LinkedList;
 
 /**
@@ -72,7 +71,7 @@ public class Interval {
      */
     public Interval(float begin, float end, InstanceTime beginInstanceTime,
                     InstanceTime endInstanceTime) {
-        // Trace.enter(this, null, new Object[] { new Float(begin), new Float(end), beginInstanceTime, endInstanceTime } ); try {
+        // Trace.enter(this, null, new Object[] { Float.valueOf(begin), Float.valueOf(end), beginInstanceTime, endInstanceTime } ); try {
         this.begin = begin;
         this.end = end;
         this.beginInstanceTime = beginInstanceTime;
@@ -147,12 +146,11 @@ public class Interval {
      * Updates the begin time for this interval.
      */
     float setBegin(float begin) {
-        // Trace.enter(this, "setBegin", new Object[] { new Float(begin) } ); try {
+        // Trace.enter(this, "setBegin", new Object[] { Float.valueOf(begin) } ); try {
         float minTime = Float.POSITIVE_INFINITY;
         this.begin = begin;
-        Iterator i = beginDependents.iterator();
-        while (i.hasNext()) {
-            InstanceTime it = (InstanceTime) i.next();
+        for (Object beginDependent : beginDependents) {
+            InstanceTime it = (InstanceTime) beginDependent;
             float t = it.dependentUpdate(begin);
             if (t < minTime) {
                 minTime = t;
@@ -166,13 +164,12 @@ public class Interval {
      * Updates the end time for this interval.
      */
     float setEnd(float end, InstanceTime endInstanceTime) {
-        // Trace.enter(this, "setEnd", new Object[] { new Float(end) } ); try {
+        // Trace.enter(this, "setEnd", new Object[] { Float.valueOf(end) } ); try {
         float minTime = Float.POSITIVE_INFINITY;
         this.end = end;
         this.endInstanceTime = endInstanceTime;
-        Iterator i = endDependents.iterator();
-        while (i.hasNext()) {
-            InstanceTime it = (InstanceTime) i.next();
+        for (Object endDependent : endDependents) {
+            InstanceTime it = (InstanceTime) endDependent;
             float t = it.dependentUpdate(end);
             if (t < minTime) {
                 minTime = t;
